# opengl-game-engine

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/Audio/: audio_manager.cpp  audio_manager.hpp
Core/Graphics/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  shape_renderer.cpp  shape_renderer.hpp  sprite_renderer.cpp  sprite_renderer.hpp  texture.cpp  texture.hpp
Core/Libs/: glad.c  glad.h  miniaudio.c  stb_image.c
Core/Utils/: resource_manager.cpp  resource_manager.hpp  window_manager.cpp  window_manager.hpp
Examples/: CMakeLists.txt
Examples/Pong/: CMakeLists.txt
Examples/Pong/shaders/: frag.glsl  vert.glsl
Examples/Pong/src/: main.cpp
Examples/RayMarching/: CMakeLists.txt
Examples/RayMarching/shaders/: frag.glsl
Examples/RayMarching/src/: main.cpp
include/: camera.hpp  mesh.hpp  model.hpp  resource_manager.hpp  shader.hpp  texture.hpp
shaders/: frag.glsl  geo.glsl  vert.glsl
src/: audio_manager.cpp  camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  resource_manager.cpp  shader.cpp  texture.cpp
